--- a/public/links.html
+++ b/public/links.html
@@ -5,7 +5,6 @@
   <title>إدارة الروابط</title>
   <link rel="icon" type="image/png" href="https://www.dropbox.com/scl/fi/f283e4rvv5cf9x12a1cic/my-website-logo.png?rlkey=yia776im7klypy27af32m0scy&e=1&st=vhaprvzh&dl=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
-  <!-- ✅ مكتبة أيقونات Bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <style>
     body {
@@ -16,15 +15,23 @@
     .card {
       margin-bottom: 20px;
     }
+    .table th, .table td {
+      white-space: nowrap; /* ✅ احتواء تلقائي */
+      vertical-align: middle;
+    }
     .table th:first-child, .table td:first-child {
       position: sticky;
       right: 0;
       background: #fff;
       z-index: 2;
     }
-    .table th:nth-child(5), .table td:nth-child(5) { width: 200px; }
-    .table th:nth-child(6), .table td:nth-child(6) { width: 100px; text-align: center; }
-    .table th:nth-child(7), .table td:nth-child(7) { width: 180px; }
+    .table th:nth-child(5), .table td:nth-child(5) { width: 120px; text-align: center; }
+    .table th:nth-child(6), .table td:nth-child(6) { width: 220px; } /* ✅ زيادة عرض عمود الإجراءات */
+    .action-buttons {
+      display: flex;
+      gap: 8px; /* ✅ مسافة بين الأزرار */
+      justify-content: center;
+    }
   </style>
 </head>
 <body>
@@ -93,10 +100,14 @@
             <td>${link.name || ''}</td>
             <td>${link.description || ''}</td>
             <td><a href="${link.link}" target="_blank">🔗 ${link.linkText}</a></td>
-            <td>${link.requiresPassword ? '<i class="bi bi-lock-fill text-danger"></i>' : '<i class="bi bi-unlock-fill text-success"></i>'}</td>
+            <td>${link.requiresPassword 
+                ? '<i class="bi bi-lock-fill text-danger fs-4"></i>' 
+                : '<i class="bi bi-unlock-fill text-success fs-4"></i>'}</td>
             <td>
-              <button class="btn btn-warning btn-sm" onclick='editLink(${JSON.stringify(link)})'>✏️ تعديل</button>
-              <button class="btn btn-danger btn-sm" onclick="deleteLink('${link._id}')">🗑️ حذف</button>
+              <div class="action-buttons">
+                <button class="btn btn-warning btn-sm" onclick='editLink(${JSON.stringify(link)})'>✏️ تعديل</button>
+                <button class="btn btn-danger btn-sm" onclick="deleteLink('${link._id}')">🗑️ حذف</button>
+              </div>
             </td>
           </tr>
         `;
