--- a/public/index.html
+++ b/public/index.html
@@ -110,6 +110,19 @@
   </style>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg sticky-top" style="background-color:#0d6efd;">
+  <div class="container-fluid">
+    <a class="navbar-brand text-white fw-bold" href="#">📺 الفيديو داشبورد</a>
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link text-white" href="#" onclick="requestDashboardAccess()">🔐 لوحة التحكم</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="https://video-dashboard-backend.onrender.com/viewlinks.html">🔗 روابط مهمة</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+  
   <div class="container text-center">
     <img src="https://www.dropbox.com/scl/fi/oyzy2tgfu9ky706mxdo2r/my-website-logo2.png?rlkey=8dqbogpfme5xlttdnululptlo&e=1&st=7kv0fd0c&dl=1" alt="شعار" style="width:120px; display:block; margin:0 auto 10px auto;">
     <h3>اختر القسم لعرض الفيديوهات</h3>
