--- a/public/index.html
+++ b/public/index.html
@@ -110,17 +110,30 @@
   </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg sticky-top" style="background-color:#0d6efd;">
+
+
+  <nav class="navbar navbar-expand-lg sticky-top" style="background: linear-gradient(to right, #0d6efd, #0b5ed7);">
   <div class="container-fluid">
-    <a class="navbar-brand text-white fw-bold" href="#">📺 الفيديو داشبورد</a>
-    <div class="collapse navbar-collapse">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link text-white" href="#" onclick="requestDashboardAccess()">🔐 لوحة التحكم</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="https://video-dashboard-backend.onrender.com/viewlinks.html">🔗 روابط مهمة</a></li>
+    <a class="navbar-brand text-white fw-bold" href="#">📺 Laith Obidat</a>
+
+    <!-- زر القائمة للجوال -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link text-white fw-semibold" href="#" onclick="requestDashboardAccess()">🔐 لوحة التحكم</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white fw-semibold" href="https://video-dashboard-backend.onrender.com/viewlinks.html">🔗 روابط مهمة</a>
+        </li>
       </ul>
     </div>
   </div>
 </nav>
+
 
   
   <div class="container text-center">
