--- a/public/index.html
+++ b/public/index.html
@@ -113,15 +113,9 @@
 
   <nav class="navbar navbar-expand-lg sticky-top" style="background: linear-gradient(to right, #0d6efd, #0b5ed7);">
   <div class="container-fluid">
-    <a class="navbar-brand text-white fw-bold" href="#">📺 Laith Obidat</a>
-
-    <!-- زر القائمة للجوال -->
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
+    <!-- الروابط أولاً من اليمين -->
     <div class="collapse navbar-collapse" id="navbarContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link text-white fw-semibold" href="#" onclick="requestDashboardAccess()">🔐 لوحة التحكم</a>
         </li>
@@ -130,8 +124,17 @@
         </li>
       </ul>
     </div>
+
+    <!-- العنوان أقصى اليسار -->
+    <a class="navbar-brand text-white fw-bold ms-auto" href="#">Laith Obidat</a>
+
+    <!-- زر القائمة للجوال -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+      <span class="navbar-toggler-icon"></span>
+    </button>
   </div>
 </nav>
+
 
 
   
