--- a/public/index.html
+++ b/public/index.html
@@ -151,9 +151,9 @@
   </div>
 
   <div class="bottom-buttons">
-    <button class="btn btn-warning" onclick="requestDashboardAccess()">🔐 لوحة التحكم</button>
+ <!--   <button class="btn btn-warning" onclick="requestDashboardAccess()">🔐 لوحة التحكم</button>
     <a href="https://video-dashboard-backend.onrender.com/viewlinks.html" class="btn btn-info">🔗 روابط مهمة</a>
-  </div>
+  </div> -->
 
   <footer>
     برمجة وتطوير: ليث عبيدات
