--- a/public/index.html
+++ b/public/index.html
@@ -117,10 +117,25 @@
 
 <nav id="mainNavbar" class="navbar navbar-expand-lg sticky-top shadow-sm" 
      style="background: linear-gradient(to right, #0d6efd, #0b5ed7); transition: box-shadow 0.3s ease;">
-  <div class="container-fluid">
+  <div class="container-fluid d-flex flex-row-reverse">
     
+    <!-- زر القائمة للجوال (أقصى اليسار) -->
+    <button class="navbar-toggler text-white border-0 order-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- العنوان -->
+    <a class="navbar-brand text-white fw-bold d-flex align-items-center order-2 ms-2" href="#">
+      <i class="bi bi-collection-play-fill fs-4 me-1"></i> Video Dashboard
+    </a>
+
+    <!-- زر الوضع ليلي/نهاري -->
+    <button id="themeToggle" class="btn btn-sm btn-outline-light order-3 ms-2">
+      <i class="bi bi-moon-stars-fill"></i>
+    </button>
+
     <!-- الروابط -->
-    <div class="collapse navbar-collapse" id="navbarContent">
+    <div class="collapse navbar-collapse order-4" id="navbarContent">
       <ul class="navbar-nav mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link text-white fw-semibold position-relative" href="#" onclick="requestDashboardAccess()">
@@ -135,22 +150,9 @@
       </ul>
     </div>
 
-    <!-- العنوان -->
-    <a class="navbar-brand text-white fw-bold ms-auto d-flex align-items-center" href="#">
-      <i class="bi bi-collection-play-fill fs-4 me-1"></i> Video Dashboard
-    </a>
-
-    <!-- زر القائمة للجوال -->
-    <button class="navbar-toggler text-white border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <!-- زر الوضع ليلي/نهاري -->
-    <button id="themeToggle" class="btn btn-sm btn-outline-light ms-2">
-      <i class="bi bi-moon-stars-fill"></i>
-    </button>
   </div>
 </nav>
+
 
 <style>
   /* تحسين حالة Hover */
