--- a/public/viewlinks.html
+++ b/public/viewlinks.html
@@ -60,14 +60,9 @@
     <!-- الروابط -->
     <div class="collapse navbar-collapse" id="navbarContent">
       <ul class="navbar-nav mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link text-white fw-semibold position-relative" href="#" onclick="requestDashboardAccess()">
-            <i class="bi bi-shield-lock-fill fs-5"></i> لوحة التحكم
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white fw-semibold position-relative" href="https://video-dashboard-backend.onrender.com/viewlinks.html">
-            <i class="bi bi-link-45deg fs-5"></i> روابط مهمة
+                <li class="nav-item">
+          <a class="nav-link text-white fw-semibold position-relative" href="https://video-dashboard-backend.onrender.com">
+            <i class="bi bi-link-45deg fs-5"></i> الرئيسية 
           </a>
         </li>
       </ul>
