--- a/public/viewlinks.html
+++ b/public/viewlinks.html
@@ -61,9 +61,11 @@
     <div class="collapse navbar-collapse" id="navbarContent">
       <ul class="navbar-nav mb-2 mb-lg-0">
                 <li class="nav-item">
-          <a class="nav-link text-white fw-semibold position-relative" href="https://video-dashboard-backend.onrender.com">
-            <i class="bi bi-link-45deg fs-5"></i> الرئيسية 
-          </a>
+          <a class="nav-link text-white fw-semibold position-relative" 
+   href="https://video-dashboard-backend.onrender.com">
+   <i class="bi bi-house-door-fill fs-5"></i> الرئيسية
+</a>
+
         </li>
       </ul>
     </div>
