--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -59,7 +59,7 @@
       <div class="col-md-4">
         <div class="dashboard-card">
           <div class="card-icon">📑</div>
-          <a href="index.html">فهرس الأقسام</a>
+          <a href="index.html">الرئيسية</a>
         </div>
       </div>
       <!-- ✅ القسم الجديد -->
