--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -58,8 +58,10 @@
       </div>
       <div class="col-md-4">
         <div class="dashboard-card">
-          <div class="card-icon">📑</div>
+         <!-- <div class="card-icon">📑</div> -->
+<i class="bi bi-house-door-fill fs-5"></i>
           <a href="index.html">الرئيسية</a>
+
         </div>
       </div>
       <!-- ✅ القسم الجديد -->
