--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>لوحة التحكم</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <style>
     body {
       background-color: #f0f2f5;
