--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -59,8 +59,9 @@
       </div>
       <div class="col-md-4">
         <div class="dashboard-card">
-         <!-- <div class="card-icon">📑</div> -->
-<i class="bi bi-house-door-fill fs-5"></i>
+   <!-- <div class="card-icon">📑</div> -->
+        <div class="bi bi-house-door-fill fs-5"></div>
+        <!-- <i class="bi bi-house-door-fill fs-5"></i> -->
           <a href="index.html">الرئيسية</a>
 
         </div>
