--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -74,28 +74,15 @@
     </div>
   </div>
 </body>
+<!-- استدعاء نافذة تسجيل الدخول -->
+<div id="loginModalContainer"></div>
 <script>
-document.addEventListener("DOMContentLoaded", function () {
-  // عرض نافذة تسجيل الدخول مباشرة عند فتح الصفحة
-  const passwordModal = new bootstrap.Modal(document.getElementById("passwordModal"));
-  passwordModal.show();
-
-  // عند الضغط على زر دخول
-  document.getElementById("confirmDashboardAccess").addEventListener("click", async function () {
-    const password = document.getElementById("dashboardPassword").value;
-    const res = await fetch("/api/verify-password", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ password })
+  fetch("login-modal.html")
+    .then(res => res.text())
+    .then(html => {
+      document.getElementById("loginModalContainer").innerHTML = html;
     });
-
-    if (res.status === 200) {
-      passwordModal.hide(); // إخفاء النافذة عند نجاح الدخول
-    } else {
-      alert("❌ كلمة المرور غير صحيحة");
-    }
-  });
-});
 </script>
+
 
 </html>
