--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -72,21 +72,36 @@
     </div>
   </div>
 
-  <!-- ✅ استدعاء كود نافذة تسجيل الدخول -->
+  <!-- ✅ استدعاء نافذة تسجيل الدخول -->
   <div id="loginModalContainer"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    // تحميل login-modal.html داخل الصفحة
     fetch("login-modal.html")
       .then(res => res.text())
       .then(html => {
         document.getElementById("loginModalContainer").innerHTML = html;
 
-        // بعد تحميل المودال وتكوينه
-        const passwordModal = new bootstrap.Modal(document.getElementById("passwordModal"));
+        // إعداد المودال ليظهر مباشرة
+        const passwordModal = new bootstrap.Modal(document.getElementById("passwordModal"), {
+          backdrop: 'static',
+          keyboard: false
+        });
         passwordModal.show();
 
+        // إخفاء زر الإغلاق العلوي ✖
+        document.querySelectorAll("#passwordModal .btn-close")
+          .forEach(btn => btn.style.display = "none");
+
+        // زر إلغاء يوجه لصفحة index.html
+        const cancelBtn = document.querySelector("#passwordModal .btn-secondary");
+        if (cancelBtn) {
+          cancelBtn.addEventListener("click", () => {
+            window.location.href = "index.html";
+          });
+        }
+
+        // تحقق من كلمة المرور عند الضغط على دخول
         document.getElementById("confirmDashboardAccess").addEventListener("click", async function () {
           const password = document.getElementById("dashboardPassword").value;
           const res = await fetch("/api/verify-password", {
@@ -96,7 +111,7 @@
           });
 
           if (res.status === 200) {
-            passwordModal.hide();
+            passwordModal.hide(); // ✅ الدخول فقط عند نجاح التحقق
           } else {
             alert("❌ كلمة المرور غير صحيحة");
           }
