--- a/public/links.html
+++ b/public/links.html
@@ -38,8 +38,9 @@
   <div class="container">
     <h2 class="mb-4 text-center">إدارة الروابط</h2>
 
-    <div class="text-end mb-3">
+    <div class="d-flex justify-content-between mb-3">
       <button class="btn btn-primary" id="showFormBtn">➕ إضافة رابط جديد</button>
+      <a href="dashboard.html" class="btn btn-outline-info">لوحة التحكم</a>
     </div>
 
     <form id="addLinkForm" class="card card-body mb-4" style="display:none;">
@@ -82,6 +83,10 @@
     </div>
   </div>
 
+  <!-- ✅ نافذة تسجيل الدخول -->
+  <div id="loginModalContainer"></div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     async function loadLinks() {
       const res = await fetch('/api/links');
@@ -93,7 +98,7 @@
           <tr>
             <td>${index + 1}</td>
             <td>${link.description || ''}</td>
-            <td><a href="${link.link}" target="_blank">🔗 ${link.linkText}</a></td>
+            <td><a href="${link.link}" target="_blank">${link.linkText}</a></td>
             <td>${link.requiresPassword 
                 ? '<i class="bi bi-lock-fill text-danger fs-4"></i>' 
                 : '<i class="bi bi-unlock-fill text-success fs-4"></i>'}</td>
@@ -163,6 +168,60 @@
     });
 
     loadLinks();
+
+    // ✅ تحميل نافذة تسجيل الدخول
+    fetch("login-modal.html")
+      .then(res => res.text())
+      .then(html => {
+        document.getElementById("loginModalContainer").innerHTML = html;
+
+        const passwordModal = new bootstrap.Modal(document.getElementById("passwordModal"), {
+          backdrop: 'static',
+          keyboard: false
+        });
+        passwordModal.show();
+
+        // إخفاء زر الإغلاق العلوي ✖
+        document.querySelectorAll("#passwordModal .btn-close")
+          .forEach(btn => btn.style.display = "none");
+
+        // زر إلغاء → العودة للرئيسية
+        const cancelBtn = document.querySelector("#passwordModal .btn-secondary");
+        if (cancelBtn) {
+          cancelBtn.addEventListener("click", () => {
+            window.location.href = "index.html";
+          });
+        }
+
+        const passwordInput = document.getElementById("dashboardPassword");
+        passwordInput.focus();
+
+        async function verifyPassword() {
+          const password = passwordInput.value;
+          const res = await fetch("/api/verify-password", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ password })
+          });
+
+          if (res.status === 200) {
+            passwordModal.hide();
+          } else {
+            alert("❌ كلمة المرور غير صحيحة");
+            passwordInput.value = "";
+            passwordInput.focus();
+          }
+        }
+
+        document.getElementById("confirmDashboardAccess")
+          .addEventListener("click", verifyPassword);
+
+        passwordInput.addEventListener("keydown", function (e) {
+          if (e.key === "Enter") {
+            verifyPassword();
+          }
+        });
+      });
   </script>
 </body>
 </html>
