--- a/public/edit.html
+++ b/public/edit.html
@@ -140,6 +140,23 @@
     </div>
   </div>
 
+  <!-- نافذة تسجيل الدخول -->
+  <div class="modal fade" id="loginModal" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">🔑 تسجيل الدخول</h5>
+        </div>
+        <div class="modal-body">
+          <input type="password" id="loginPassword" class="form-control" placeholder="أدخل كلمة المرور">
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-primary w-100" onclick="checkLogin()">دخول</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 <script>
@@ -159,6 +176,29 @@ let quill = new Quill('#editor', {
   }
 });
 
+// ====== حماية تسجيل الدخول ======
+const ADMIN_PASSWORD = "12345"; // 🔒 عدلها من السيرفر لاحقاً
+
+function checkLogin() {
+  const pass = document.getElementById("loginPassword").value;
+  if (pass === ADMIN_PASSWORD) {
+    localStorage.setItem("isLoggedIn", "true");
+    bootstrap.Modal.getInstance(document.getElementById("loginModal")).hide();
+  } else {
+    alert("❌ كلمة المرور غير صحيحة");
+  }
+}
+
+window.addEventListener("DOMContentLoaded", () => {
+  if (localStorage.getItem("isLoggedIn") !== "true") {
+    const loginModal = new bootstrap.Modal(document.getElementById("loginModal"));
+    loginModal.show();
+    // التركيز على كلمة المرور بعد تحميل Bootstrap
+    setTimeout(() => document.getElementById("loginPassword").focus(), 500);
+  }
+});
+
+// ====== تحميل البيانات ======
 async function fetchDepartments() {
   try {
     const res = await fetch(`${API_BASE}/api/departments`);
